--- a/style/style.css
+++ b/style/style.css
@@ -212,6 +212,20 @@ clear: both;
     text-align: center;
 }
 
+.options{
+    padding: 10px 20px;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    width: 5%;
+}
+
+.options:focus{
+    border: 3px solid #555;
+}
+
+
 #drop{
     padding: 10px 20px;
     border: 3px solid #ccc;
@@ -345,6 +359,12 @@ clear: both;
 }
 
 #result{
+    padding: 30px 0;
+    font-size: 50px;
+    text-align: center;
+}
+
+#pass{
     padding: 30px 0;
     font-size: 50px;
     text-align: center;
